--- a/services/translations/locales/ru.json
+++ b/services/translations/locales/ru.json
@@ -21,184 +21,222 @@
   "are-you-sure-you-want-to-quit": "Вы уверены, что хотите выйти?",
   "yes": "Да",
   "no": "Нет",
-  "question-1-1": "Какое крупное животное известно своим характерным черно-белым полосатым окрасом?",
-  "option-1-1-1": "Тигр",
-  "option-1-1-2": "Леопард",
-  "option-1-1-3": "Зебра",
-  "option-1-1-4": "Ягуар",
-  "answer-1-1": 3,
-  "question-1-2": "Если вы играете в 'Камень, Ножницы, Бумага', что победит 'бумага'?",
-  "option-1-2-1": "Камень",
-  "option-1-2-2": "Ножницы",
-  "option-1-2-3": "Бумага",
-  "option-1-2-4": "Ящерица",
-  "answer-1-2": 1,
-  "question-1-3": "Какой кухонный прибор обычно используется для размешивания супа?",
-  "option-1-3-1": "Вилка",
-  "option-1-3-2": "Ложка",
-  "option-1-3-3": "Нож",
-  "option-1-3-4": "Палочки для еды",
-  "answer-1-3": 2,
-  "question-1-4": "Какая планета известна своими яркими кольцами?",
-  "option-1-4-1": "Марс",
-  "option-1-4-2": "Юпитер",
-  "option-1-4-3": "Сатурн",
-  "option-1-4-4": "Уран",
-  "answer-1-4": 3,
-  "question-1-5": "В мире мультфильмов, как зовут лучшего друга Губки Боба, морской звезды?",
-  "option-1-5-1": "Сквидвард",
-  "option-1-5-2": "Мистер Крабс",
-  "option-1-5-3": "Гэри",
-  "option-1-5-4": "Патрик",
-  "answer-1-5": 4,
-  "question-1-6": "Какая популярная игрушка состоит из маленьких, соединяющихся пластиковых кирпичиков?",
-  "option-1-6-1": "Hot Wheels",
-  "option-1-6-2": "Lego",
-  "option-1-6-3": "Барби",
-  "option-1-6-4": "Nerf",
-  "answer-1-6": 2,
-  "question-1-7": "Как называется газ, которым мы дышим, чтобы выжить?",
-  "option-1-7-1": "Углекислый газ",
-  "option-1-7-2": "Гелий",
-  "option-1-7-3": "Азот",
-  "option-1-7-4": "Кислород",
-  "answer-1-7": 4,
-  "question-1-8": "В сказке 'Красная Шапочка', каким животным притворился Большой Злой Волк?",
-  "option-1-8-1": "Бабушка",
-  "option-1-8-2": "Дровосек",
-  "option-1-8-3": "Охотник",
-  "option-1-8-4": "Фермер",
-  "answer-1-8": 1,
-  "question-1-9": "Какой из этих овощей также является названием цвета?",
-  "option-1-9-1": "Картофель",
-  "option-1-9-2": "Морковь",
-  "option-1-9-3": "Лук",
-  "option-1-9-4": "Салат",
-  "answer-1-9": 2,
-  "question-1-10": "Какой музыкальный инструмент имеет клавиатуру и ряд черно-белых клавиш?",
-  "option-1-10-1": "Гитара",
-  "option-1-10-2": "Барабаны",
-  "option-1-10-3": "Скрипка",
-  "option-1-10-4": "Фортепиано",
-  "answer-1-10": 4,
-  "question-2-1": "Исторический период, известный как 'Эпоха Просвещения', характеризуется сосредоточением на чем из перечисленного?",
-  "option-2-1-1": "Вере и преданности",
-  "option-2-1-2": "Разуме и индивидуализме",
-  "option-2-1-3": "Завоевании и расширении",
-  "option-2-1-4": "Суеверии и фольклоре",
-  "answer-2-1": 2,
-  "question-2-2": "Каково научное название страха публичных выступлений?",
-  "option-2-2-1": "Агорафобия",
-  "option-2-2-2": "Глоссофобия",
-  "option-2-2-3": "Клаустрофобия",
-  "option-2-2-4": "Гидрофобия",
-  "answer-2-2": 2,
-  "question-2-3": "Какая известная опера, написанная Джакомо Пуччини, происходит в Риме?",
-  "option-2-3-1": "Богема",
-  "option-2-3-2": "Мадам Баттерфляй",
-  "option-2-3-3": "Турандот",
-  "option-2-3-4": "Тоска",
-  "answer-2-3": 4,
-  "question-2-4": "Как называется вещество, которое ускоряет химическую реакцию, не расходуясь в процессе?",
-  "option-2-4-1": "Ингибитор",
-  "option-2-4-2": "Катализатор",
-  "option-2-4-3": "Растворитель",
-  "option-2-4-4": "Фермент",
-  "answer-2-4": 2,
-  "question-2-5": "Как называется вымышленный город, в котором живут 'Симпсоны'?",
-  "option-2-5-1": "Спрингфилд",
-  "option-2-5-2": "Куахог",
-  "option-2-5-3": "Южный Парк",
-  "option-2-5-4": "Бедрок",
-  "answer-2-5": 1,
-  "question-2-6": "Как называется известная астрономическая обсерватория, расположенная на острове Гавайи?",
-  "option-2-6-1": "Космический телескоп Хаббл",
-  "option-2-6-2": "Обсерватория Аресибо",
-  "option-2-6-3": "Обсерватория Мауна-Кеа",
-  "option-2-6-4": "Обсерватория Паломар",
-  "answer-2-6": 3,
-  "question-2-7": "Период 'Ренессанса', известный своим искусством и культурой, начался в какой стране?",
-  "option-2-7-1": "Франция",
-  "option-2-7-2": "Испания",
-  "option-2-7-3": "Италия",
-  "option-2-7-4": "Германия",
-  "answer-2-7": 3,
-  "question-2-8": "В мире финансов, как называется внезапное, резкое падение цен на акции по значительному числу акций?",
-  "option-2-8-1": "Бычий рынок",
-  "option-2-8-2": "Медвежий рынок",
-  "option-2-8-3": "Обвал рынка",
-  "option-2-8-4": "Рецессия",
-  "answer-2-8": 3,
-  "question-2-9": "Какое из этих названий принадлежит известной картине Эдварда Мунка?",
-  "option-2-9-1": "Постоянство памяти",
-  "option-2-9-2": "Крик",
-  "option-2-9-3": "Герника",
-  "option-2-9-4": "Звёздная ночь",
-  "answer-2-9": 2,
-  "question-2-10": "Знаменитый роман 'Моби Дик' рассказывает историю капитана Ахаба, охотящегося на большого белого кита. Как зовут кита?",
-  "option-2-10-1": "Левиафан",
-  "option-2-10-2": "Моби Дик",
-  "option-2-10-3": "Синяя Борода",
-  "option-2-10-4": "Косатка",
-  "answer-2-10": 2,
-  "question-3-1": "Философская концепция 'tabula rasa' (чистый лист) наиболее тесно связана с каким философом?",
-  "option-3-1-1": "Платон",
-  "option-3-1-2": "Джон Локк",
-  "option-3-1-3": "Сократ",
-  "option-3-1-4": "Иммануил Кант",
-  "answer-3-1": 2,
-  "question-3-2": "В 'Войне Алых и Белых роз' в Англии, какие два дома были в конфликте?",
-  "option-3-2-1": "Тюдор и Стюарт",
-  "option-3-2-2": "Йорк и Ланкастер",
-  "option-3-2-3": "Виндзор и Ганновер",
-  "option-3-2-4": "Плантагенет и Тюдор",
-  "answer-3-2": 2,
-  "question-3-3": "Как называется литературный приём, когда автор использует предмет или идею для представления чего-то другого?",
-  "option-3-3-1": "Метафора",
-  "option-3-3-2": "Сравнение",
-  "option-3-3-3": "Символизм",
-  "option-3-3-4": "Аллитерация",
-  "answer-3-3": 3,
-  "question-3-4": "В химии, как называется процесс превращения жидкости в твердое тело?",
-  "option-3-4-1": "Сублимация",
-  "option-3-4-2": "Испарение",
-  "option-3-4-3": "Конденсация",
-  "option-3-4-4": "Замерзание",
-  "answer-3-4": 4,
-  "question-3-5": "Какой из этих известных авторов писал под псевдонимом 'Льюис Кэрролл'?",
-  "option-3-5-1": "Джордж Оруэлл",
-  "option-3-5-2": "Чарльз Диккенс",
-  "option-3-5-3": "Дж.К. Роулинг",
-  "option-3-5-4": "Чарльз Лютвидж Доджсон",
-  "answer-3-5": 4,
-  "question-3-6": "Каково научное название феномена 'Северное сияние'?",
-  "option-3-6-1": "Аврора Бореалис",
-  "option-3-6-2": "Серебристые облака",
-  "option-3-6-3": "Зодиакальный свет",
-  "option-3-6-4": "Свечение ночного неба",
-  "answer-3-6": 1,
-  "question-3-7": "Кто из этих исторических личностей был римским гладиатором, который возглавил крупное восстание рабов?",
-  "option-3-7-1": "Спартак",
-  "option-3-7-2": "Ганнибал",
-  "option-3-7-3": "Юлий Цезарь",
-  "option-3-7-4": "Нерон",
-  "answer-3-7": 1,
-  "question-3-8": "Какая древняя цивилизация разработала первую известную форму письма, клинопись?",
-  "option-3-8-1": "Древний Египет",
-  "option-3-8-2": "Древний Рим",
-  "option-3-8-3": "Месопотамия",
-  "option-3-8-4": "Древняя Греция",
-  "answer-3-8": 3,
-  "question-3-9": "Как называется математическая константа, примерно равная 3.14159?",
-  "option-3-9-1": "Фи",
-  "option-3-9-2": "Эпсилон",
-  "option-3-9-3": "Пи",
-  "option-3-9-4": "Дельта",
-  "answer-3-9": 3,
-  "question-3-10": "В игре в шахматы, как называется единственная фигура, которая может перепрыгивать через другие фигуры?",
-  "option-3-10-1": "Пешка",
-  "option-3-10-2": "Ладья",
-  "option-3-10-3": "Конь",
-  "option-3-10-4": "Слон",
-  "answer-3-10": 3
+  "quiz": [
+    [
+      {
+        "id": "1-1",
+        "question": "Какое крупное животное известно своим характерным черно-белым полосатым окрасом?",
+        "options": ["Тигр", "Леопард", "Зебра", "Ягуар"],
+        "answer": 3
+      },
+      {
+        "id": "1-2",
+        "question": "Если вы играете в 'Камень, Ножницы, Бумага', что победит 'бумага'?",
+        "options": ["Камень", "Ножницы", "Бумага", "Ящерица"],
+        "answer": 1
+      },
+      {
+        "id": "1-3",
+        "question": "Какой кухонный прибор обычно используется для размешивания супа?",
+        "options": ["Вилка", "Ложка", "Нож", "Палочки для еды"],
+        "answer": 2
+      },
+      {
+        "id": "1-4",
+        "question": "Какая планета известна своими яркими кольцами?",
+        "options": ["Марс", "Юпитер", "Сатурн", "Уран"],
+        "answer": 3
+      },
+      {
+        "id": "1-5",
+        "question": "В мире мультфильмов, как зовут лучшего друга Губки Боба, морской звезды?",
+        "options": ["Сквидвард", "Мистер Крабс", "Гэри", "Патрик"],
+        "answer": 4
+      },
+      {
+        "id": "1-6",
+        "question": "Какая популярная игрушка состоит из маленьких, соединяющихся пластиковых кирпичиков?",
+        "options": ["Hot Wheels", "Lego", "Барби", "Nerf"],
+        "answer": 2
+      },
+      {
+        "id": "1-7",
+        "question": "Как называется газ, которым мы дышим, чтобы выжить?",
+        "options": ["Углекислый газ", "Гелий", "Азот", "Кислород"],
+        "answer": 4
+      },
+      {
+        "id": "1-8",
+        "question": "В сказке 'Красная Шапочка', каким животным притворился Большой Злой Волк?",
+        "options": ["Бабушка", "Дровосек", "Охотник", "Фермер"],
+        "answer": 1
+      },
+      {
+        "id": "1-9",
+        "question": "Какой из этих овощей также является названием цвета?",
+        "options": ["Картофель", "Морковь", "Лук", "Салат"],
+        "answer": 2
+      },
+      {
+        "id": "1-10",
+        "question": "Какой музыкальный инструмент имеет клавиатуру и ряд черно-белых клавиш?",
+        "options": ["Гитара", "Барабаны", "Скрипка", "Фортепиано"],
+        "answer": 4
+      }
+    ],
+    [
+      {
+        "id": "2-1",
+        "question": "Исторический период, известный как 'Эпоха Просвещения', характеризуется сосредоточением на чем из перечисленного?",
+        "options": [
+          "Вере и преданности",
+          "Разуме и индивидуализме",
+          "Завоевании и расширении",
+          "Суеверии и фольклоре"
+        ],
+        "answer": 2
+      },
+      {
+        "id": "2-2",
+        "question": "Каково научное название страха публичных выступлений?",
+        "options": ["Агорафобия", "Глоссофобия", "Клаустрофобия", "Гидрофобия"],
+        "answer": 2
+      },
+      {
+        "id": "2-3",
+        "question": "Какая известная опера, написанная Джакомо Пуччини, происходит в Риме?",
+        "options": ["Богема", "Мадам Баттерфляй", "Турандот", "Тоска"],
+        "answer": 4
+      },
+      {
+        "id": "2-4",
+        "question": "Как называется вещество, которое ускоряет химическую реакцию, не расходуясь в процессе?",
+        "options": ["Ингибитор", "Катализатор", "Растворитель", "Фермент"],
+        "answer": 2
+      },
+      {
+        "id": "2-5",
+        "question": "Как называется вымышленный город, в котором живут 'Симпсоны'?",
+        "options": ["Спрингфилд", "Куахог", "Южный Парк", "Бедрок"],
+        "answer": 1
+      },
+      {
+        "id": "2-6",
+        "question": "Как называется известная астрономическая обсерватория, расположенная на острове Гавайи?",
+        "options": [
+          "Космический телескоп Хаббл",
+          "Обсерватория Аресибо",
+          "Обсерватория Мауна-Кеа",
+          "Обсерватория Паломар"
+        ],
+        "answer": 3
+      },
+      {
+        "id": "2-7",
+        "question": "Период 'Ренессанса', известный своим искусством и культурой, начался в какой стране?",
+        "options": ["Франция", "Испания", "Италия", "Германия"],
+        "answer": 3
+      },
+      {
+        "id": "2-8",
+        "question": "В мире финансов, как называется внезапное, резкое падение цен на акции по значительному числу акций?",
+        "options": ["Бычий рынок", "Медвежий рынок", "Обвал рынка", "Рецессия"],
+        "answer": 3
+      },
+      {
+        "id": "2-9",
+        "question": "Какое из этих названий принадлежит известной картине Эдварда Мунка?",
+        "options": ["Постоянство памяти", "Крик", "Герника", "Звёздная ночь"],
+        "answer": 2
+      },
+      {
+        "id": "2-10",
+        "question": "Знаменитый роман 'Моби Дик' рассказывает историю капитана Ахаба, охотящегося на большого белого кита. Как зовут кита?",
+        "options": ["Левиафан", "Моби Дик", "Синяя Борода", "Косатка"],
+        "answer": 2
+      }
+    ],
+    [
+      {
+        "id": "3-1",
+        "question": "Философская концепция 'tabula rasa' (чистый лист) наиболее тесно связана с каким философом?",
+        "options": ["Платон", "Джон Локк", "Сократ", "Иммануил Кант"],
+        "answer": 2
+      },
+      {
+        "id": "3-2",
+        "question": "В 'Войне Алых и Белых роз' в Англии, какие два дома были в конфликте?",
+        "options": [
+          "Тюдор и Стюарт",
+          "Йорк и Ланкастер",
+          "Виндзор и Ганновер",
+          "Плантагенет и Тюдор"
+        ],
+        "answer": 2
+      },
+      {
+        "id": "3-3",
+        "question": "Как называется литературный приём, когда автор использует предмет или идею для представления чего-то другого?",
+        "options": ["Метафора", "Сравнение", "Символизм", "Аллитерация"],
+        "answer": 3
+      },
+      {
+        "id": "3-4",
+        "question": "В химии, как называется процесс превращения жидкости в твердое тело?",
+        "options": ["Сублимация", "Испарение", "Конденсация", "Замерзание"],
+        "answer": 4
+      },
+      {
+        "id": "3-5",
+        "question": "Какой из этих известных авторов писал под псевдонимом 'Льюис Кэрролл'?",
+        "options": [
+          "Джордж Оруэлл",
+          "Чарльз Диккенс",
+          "Дж.К. Роулинг",
+          "Чарльз Лютвидж Доджсон"
+        ],
+        "answer": 4
+      },
+      {
+        "id": "3-6",
+        "question": "Каково научное название феномена 'Северное сияние'?",
+        "options": [
+          "Аврора Бореалис",
+          "Серебристые облака",
+          "Зодиакальный свет",
+          "Свечение ночного неба"
+        ],
+        "answer": 1
+      },
+      {
+        "id": "3-7",
+        "question": "Кто из этих исторических личностей был римским гладиатором, который возглавил крупное восстание рабов?",
+        "options": ["Спартак", "Ганнибал", "Юлий Цезарь", "Нерон"],
+        "answer": 1
+      },
+      {
+        "id": "3-8",
+        "question": "Какая древняя цивилизация разработала первую известную форму письма, клинопись?",
+        "options": [
+          "Древний Египет",
+          "Древний Рим",
+          "Месопотамия",
+          "Древняя Греция"
+        ],
+        "answer": 3
+      },
+      {
+        "id": "3-9",
+        "question": "Как называется математическая константа, примерно равная 3.14159?",
+        "options": ["Фи", "Эпсилон", "Пи", "Дельта"],
+        "answer": 3
+      },
+      {
+        "id": "3-10",
+        "question": "В игре в шахматы, как называется единственная фигура, которая может перепрыгивать через другие фигуры?",
+        "options": ["Пешка", "Ладья", "Конь", "Слон"],
+        "answer": 3
+      }
+    ]
+  ]
 }
