added guaranteed probability depending on current stage

--- a/services/translations/locales/am.json
+++ b/services/translations/locales/am.json
@@ -21,6 +21,8 @@
   "are-you-sure-you-want-to-quit": "Դուք համոզվա՞ծ եք, որ ցանկանում եք դուրս գալ։",
   "yes": "Այո",
   "no": "Ոչ",
+  "please-wait": "Խնդրում ենք սպասել։",
+  "we-are-getting-in-with-your-friend": "Մենք կապվում ենք մեջ ենք ձեր ընկերոջ հետ...",
   "quiz": [
     [
       {
