--- a/services/translations/locales/en.json
+++ b/services/translations/locales/en.json
@@ -21,6 +21,8 @@
   "are-you-sure-you-want-to-quit": "Are you sure you want to quit?",
   "yes": "Yes",
   "no": "No",
+  "please-wait": "Please wait.",
+  "we-are-getting-in-with-your-friend": "We are getting in touch with your friend...",
   "quiz": [
     [
       {
