--- a/services/translations/locales/ru.json
+++ b/services/translations/locales/ru.json
@@ -21,6 +21,8 @@
   "are-you-sure-you-want-to-quit": "Вы уверены, что хотите выйти?",
   "yes": "Да",
   "no": "Нет",
+  "please-wait": "Пожалуйста, подождите.",
+  "we-are-getting-in-with-your-friend": "Мы связываемся с вашим другом...",
   "quiz": [
     [
       {
