added switch question

--- a/services/translations/locales/am.json
+++ b/services/translations/locales/am.json
@@ -23,6 +23,7 @@
   "no": "Ոչ",
   "please-wait": "Խնդրում ենք սպասել։",
   "we-are-getting-in-with-your-friend": "Մենք կապվում ենք մեջ ենք ձեր ընկերոջ հետ...",
+  "which-option-do-you-think-is-correct": "Ո՞ր տարբերակը կընտրեիք։ Մի անհանգստացեք, սխալ պատասխանելու համար Դուք չեք պարտվի։ Մենք կփոխենք հարցը։",
   "quiz": [
     [
       {
