--- a/services/translations/locales/en.json
+++ b/services/translations/locales/en.json
@@ -23,6 +23,7 @@
   "no": "No",
   "please-wait": "Please wait.",
   "we-are-getting-in-with-your-friend": "We are getting in touch with your friend...",
+  "which-option-do-you-think-is-correct": "Which option do you think is correct? Don't worry, you won't lose for a wrong answer. We will switch the question.",
   "quiz": [
     [
       {
