--- a/services/translations/locales/ru.json
+++ b/services/translations/locales/ru.json
@@ -23,6 +23,7 @@
   "no": "Нет",
   "please-wait": "Пожалуйста, подождите.",
   "we-are-getting-in-with-your-friend": "Мы связываемся с вашим другом...",
+  "which-option-do-you-think-is-correct": "Какой вариант, по вашему мнению, является правильным? Не волнуйтесь, вы не проиграете за неправильный ответ. Мы сменим вопрос.",
   "quiz": [
     [
       {
